School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/syntax/invalid/OwnTests_stepA/invalid/parser/if_mauvaiseSyntax.deca
// Simple If avec une mauvaise syntax
{
    if (45 > 2 {
        print("ok");
    }
}